--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pearl Lemon Games: A Beacon of Innovation in UK Game Development</h1>
+        <h1>Pearl Lemon Games: Top Notch Game Development Agency</h1>
         <p>As a pioneering <strong>game development company</strong> nestled in the heart of the UK's tech hub, Pearl Lemon Games is at the forefront of transforming the gaming landscape. Renowned among <strong>game developer companies in the UK</strong>, we harness creativity and technology to develop captivating games that resonate with audiences globally.</p>
-
+ <a href="https://pearllemongames.com/" class="cta-button" target="_blank">Contact Pearl Lemon Games</a>
         <h2>Our Philosophy: Beyond Gaming</h2>
         <p>At Pearl Lemon Games, we believe that gaming should go beyond entertainment. Our approach as a <strong>game design company</strong> and one of the leading <strong>game development companies in the UK</strong> is to create immersive experiences that tell stories, evoke emotions, and challenge perceptions. This philosophy positions us uniquely among <strong>game developing companies</strong> and <strong>game designing companies</strong>, making us a preferred partner for those seeking depth and innovation in gaming.</p>
 
@@ -31,14 +31,13 @@
             <li>Comprehensive Game Publishing: As <strong>game publishers UK</strong> and leaders among <strong>UK game publishers</strong>, we offer comprehensive services from development to publishing.</li>
         </ul>
 
-        <h2>Expanding the Horizons of Game Development in the UK</h2>
+        <h2>Expanding the Horizons of Game Development Worldwide</h2>
         <p>Pearl Lemon Games is not just another name among <strong>game companies in the UK</strong>. We are trendsetters, pushing the boundaries of what is possible in <strong>game development</strong>, <strong>game studios in the UK</strong>, and <strong>UK game studios</strong>. Our team of <strong>game developers UK</strong> and <strong>UK based game developers</strong> is dedicated to creating games that leave a lasting impact.</p>
         <p>As a leading <strong>video game company in the UK</strong>, we take pride in our contributions to the vibrant <strong>gaming companies in the UK</strong> ecosystem. Our work as a <strong>gaming app developer</strong> and <strong>game dev studio</strong> reflects our commitment to excellence and innovation in the gaming industry.</p>
 
         <h2>Join Us on This Exciting Journey</h2>
         <p>Whether you're seeking the thrill of new <strong>game development companies near me</strong> or the expertise of <strong>UK game developers</strong>, Pearl Lemon Games invites you to explore the future of gaming. Join us as we continue to shape the landscape of <strong>gaming companies in the UK</strong>, <strong>gaming studios UK</strong>, and beyond.</p>
 
-        <a href="https://pearllemongames.com/" class="cta-button" target="_blank">Discover Pearl Lemon Games</a>
     </div>
 </body>
 </html>
